--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,5 @@
     <string name="session_expired_message">Sessão expirada. Por favor inicie sessão.</string>
     <string name="login">login</string>
     <string name="password">password</string>
+    <string name="title_activity_maps">MapsActivity</string>
 </resources>
